# serializer version: 1
# name: test_update_entites[gateway_firmware-gateway]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'device_class': 'firmware',
      'entity_picture': 'https://brands.home-assistant.io/_/lamarzocco/icon.png',
      'friendly_name': 'GS01234 Gateway firmware',
      'in_progress': False,
      'installed_version': 'v3.1-rc4',
      'latest_version': 'v3.5-rc3',
      'release_summary': None,
      'release_url': 'https://support-iot.lamarzocco.com/firmware-updates/',
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 1>,
      'title': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.gs01234_gateway_firmware',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_entites[gateway_firmware-gateway].1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'update.gs01234_gateway_firmware',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <UpdateDeviceClass.FIRMWARE: 'firmware'>,
    'original_icon': None,
    'original_name': 'Gateway firmware',
    'platform': 'lamarzocco',
    'previous_unique_id': None,
    'supported_features': <UpdateEntityFeature: 1>,
    'translation_key': 'gateway_firmware',
    'unique_id': 'GS01234_gateway_firmware',
    'unit_of_measurement': None,
  })
# ---
# name: test_update_entites[machine_firmware-machine]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'device_class': 'firmware',
      'entity_picture': 'https://brands.home-assistant.io/_/lamarzocco/icon.png',
      'friendly_name': 'GS01234 Machine firmware',
      'in_progress': False,
      'installed_version': '1.40',
      'latest_version': '1.55',
      'release_summary': None,
      'release_url': 'https://support-iot.lamarzocco.com/firmware-updates/',
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 1>,
      'title': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.gs01234_machine_firmware',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_entites[machine_firmware-machine].1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'update.gs01234_machine_firmware',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <UpdateDeviceClass.FIRMWARE: 'firmware'>,
    'original_icon': None,
    'original_name': 'Machine firmware',
    'platform': 'lamarzocco',
    'previous_unique_id': None,
    'supported_features': <UpdateEntityFeature: 1>,
    'translation_key': 'machine_firmware',
    'unique_id': 'GS01234_machine_firmware',
    'unit_of_measurement': None,
  })
# ---
